correcting manifest files

--- a/hipster/kubernetes-manifests/currencyservice.yaml
+++ b/hipster/kubernetes-manifests/currencyservice.yaml
@@ -43,7 +43,7 @@ spec:
               - ALL
           privileged: false
           readOnlyRootFilesystem: true
-        image: currencyservice
+        image: gcr.io/google-samples/microservices-demo/currencyservice:v0.8.0
         ports:
         - name: grpc
           containerPort: 7000
@@ -52,12 +52,6 @@ spec:
           value: "7000"
         - name: DISABLE_PROFILER
           value: "1"
-        readinessProbe:
-          grpc:
-            port: 7000
-        livenessProbe:
-          grpc:
-            port: 7000
         resources:
           requests:
             cpu: 100m
