--- a/hipster/kubernetes-manifests/recommendationservice.yaml
+++ b/hipster/kubernetes-manifests/recommendationservice.yaml
@@ -43,17 +43,9 @@ spec:
               - ALL
           privileged: false
           readOnlyRootFilesystem: true
-        image: recommendationservice
+        image: gcr.io/google-samples/microservices-demo/recommendationservice:v0.8.0
         ports:
         - containerPort: 8080
-        readinessProbe:
-          periodSeconds: 5
-          grpc:
-            port: 8080
-        livenessProbe:
-          periodSeconds: 5
-          grpc:
-            port: 8080
         env:
         - name: PORT
           value: "8080"
