--- a/hipster/kubernetes-manifests/adservice.yaml
+++ b/hipster/kubernetes-manifests/adservice.yaml
@@ -43,7 +43,7 @@ spec:
               - ALL
           privileged: false
           readOnlyRootFilesystem: true
-        image: gcr.io/google-samples/microservices-demo/adservice
+        image: gcr.io/google-samples/microservices-demo/adservice:v0.8.0
         ports:
         - containerPort: 9555
         env:
@@ -56,20 +56,6 @@ spec:
           limits:
             cpu: 300m
             memory: 300Mi
-        readinessProbe:
-          initialDelaySeconds: 10
-          timeoutSeconds: 2
-          failureThreshold: 5
-          periodSeconds: 10
-          grpc:
-            port: 9555
-        livenessProbe:
-          initialDelaySeconds: 15
-          periodSeconds: 15
-          timeoutSeconds: 3
-          failureThreshold: 5
-          grpc:
-            port: 9555
 ---
 apiVersion: v1
 kind: Service
