Push changes with secret key config

--- a/.github/workflows/update-image-tag.yaml
+++ b/.github/workflows/update-image-tag.yaml
@@ -34,6 +34,6 @@ jobs:
       run: |
         git config --global user.name "GitHub Actions"
         git config --global user.email "actions@github.com"
-        git commit -am "🔁 Update ${{ github.event.inputs.service }} to ${{ github.event.inputs.image_tag }}"
-        git push
-
+        git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}
+        git commit -am "🔄 Update adservice to ${{ github.event.inputs.image_tag }}"
+        git push origin HEAD:${{ github.ref_name }}
