--- a/.github/workflows/update-image-tag.yaml
+++ b/.github/workflows/update-image-tag.yaml
@@ -1,4 +1,4 @@
-name: Update run config
+name: Updating run config now
 env:
   GH_PAT: ${{ secrets.GH_PAT }}
 on:
@@ -36,5 +36,6 @@ jobs:
         git config --global user.name "GitHub Actions"
         git config --global user.email "actions@github.com"
         git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}
-        git commit -am "🔄 Update adservice to ${{ github.event.inputs.image_tag }}"
+        git add .
+        git commit -m "🔄 Update adservice to v0.2.0" || echo "No changes to commit"
         git push origin HEAD:${{ github.ref_name }}
