--- a/.github/workflows/update-image-tag.yaml
+++ b/.github/workflows/update-image-tag.yaml
@@ -33,6 +33,9 @@ jobs:
 
     - name: Commit and Push Changes
       run: |
+        git remote -v
+        git branch
+        echo "GH_PAT: ${{ secrets.GH_PAT != '' }}"
         git config --global user.name "GitHub Actions"
         git config --global user.email "actions@github.com"
         git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}
