--- a/.github/workflows/update-image-tag.yaml
+++ b/.github/workflows/update-image-tag.yaml
@@ -1,6 +1,5 @@
 name: Updating run config now
-env:
-  GH_PAT: ${{ secrets.GH_PAT }}
+
 on:
   workflow_dispatch:
     inputs:
@@ -14,10 +13,11 @@ on:
 jobs:
   update-manifest:
     runs-on: ubuntu-latest
-
+    env:
+      GH_PAT: ${{ secrets.GH_PAT }}
     steps:
     - name: Checkout Repo
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Update Image Tag
       run: |
@@ -38,7 +38,7 @@ jobs:
         echo "GH_PAT: ${{ secrets.GH_PAT != '' }}"
         git config --global user.name "GitHub Actions"
         git config --global user.email "actions@github.com"
-        git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}
+        git remote set-url origin https://x-access-token:${GH_PAT}@github.com/${{ github.repository }}
         git add .
-        git commit -m "🔄 Update adservice to v0.2.0" || echo "No changes to commit"
-        git push origin HEAD:${{ github.ref_name }}
+        git commit -m "✅ Update adservice to v0.2.0" || echo "Nothing to commit"
+        git push origin HEAD:main
