--- a/.github/workflows/update-image-tag.yaml
+++ b/.github/workflows/update-image-tag.yaml
@@ -7,7 +7,7 @@ on:
         description: 'Service Name (e.g. adservice)'
         required: true
       image_tag:
-        description: 'New Image Tag (e.g. v0.3.0)'
+        description: 'New Image Tag (e.g. v0.2.0)'
         required: true
 
 jobs:
@@ -35,7 +35,7 @@ jobs:
       run: |
         git remote -v
         git branch
-        echo "GH_PAT: ${{ secrets.GH_PAT != '' }}"
+        echo "GH_PAT is set: ${GH_PAT}"
         git config --global user.name "GitHub Actions"
         git config --global user.email "actions@github.com"
         git remote set-url origin https://x-access-token:${GH_PAT}@github.com/${{ github.repository }}
