--- a/.github/workflows/update-image-tag.yaml
+++ b/.github/workflows/update-image-tag.yaml
@@ -16,8 +16,10 @@ jobs:
     env:
       GH_PAT: ${{ secrets.GH_PAT }}
     steps:
-    - name: Checkout Repo
+    - name: Checkout using Personal Access Token
       uses: actions/checkout@v4
+      with:
+        token: ${{ secrets.GH_PAT }}  # 🔥 This is critical!
 
     - name: Update Image Tag
       run: |
