--- a/.github/workflows/update-image-tag.yaml
+++ b/.github/workflows/update-image-tag.yaml
@@ -1,5 +1,4 @@
-name: Updating run config now
-
+name: Github workflow with ArgoCD . ## This workflow updates the image tag in Kubernetes manifests and pushes changes to the repository.
 on:
   workflow_dispatch:
     inputs:
@@ -7,11 +6,10 @@ on:
         description: 'Service Name (e.g. adservice)'
         required: true
       image_tag:
-        description: 'New Image Tag (e.g. v0.8.0)'
+        description: 'New Image Tag (e.g. v0.9.0)'
         required: true
-
 jobs:
-  update-manifest:
+  update-manifest-files:
     runs-on: ubuntu-latest
     env:
       GH_PAT: ${{ secrets.GH_PAT }}
@@ -20,7 +18,6 @@ jobs:
       uses: actions/checkout@v4
       with:
         token: ${{ secrets.GH_PAT }}  # 🔥 This is critical!
-
     - name: Update Image Tag
       run: |
         file="hipster/kubernetes-manifests/${{ github.event.inputs.service }}.yaml"
@@ -28,11 +25,9 @@ jobs:
           echo "❌ File not found: $file"
           exit 1
         fi
-
         echo "🔄 Updating $file..."
         sed -i "s|\(image: .*${{ github.event.inputs.service }}:\).*|\1${{ github.event.inputs.image_tag }}|" "$file"
         echo "✅ Updated image tag in $file"
-
     - name: Commit and Push Changes
       run: |
         git remote -v
@@ -42,5 +37,5 @@ jobs:
         git config --global user.email "actions@github.com"
         git remote set-url origin https://x-access-token:${GH_PAT}@github.com/${{ github.repository }}
         git add .
-        git commit -m "✅ Update adservice to v0.8.0" || echo "Nothing to commit"
+        git commit -m "✅ Update adservice to v0.9.0" || echo "Nothing to commit"
         git push origin HEAD:main
