Commit for docker images .

--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -1,4 +1,4 @@
-name: Build & Push AdService ## Building image and pushing in docker
+name: Build & Push Docker images ## Building image and pushing in docker
 
 on:
   workflow_dispatch:
