--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -26,5 +26,5 @@ jobs:
 
       - name: Build and Push Docker image
         run: |
-          docker build -t pathfindersh/hipster-app:${{ github.event.inputs.NEW_IMAGE_TAG }} ./hipster/src/adservice
-          docker push pathfindersh/hipster-app:${{ github.event.inputs.NEW_IMAGE_TAG }}
+          docker build -t pathfindersh/hipster-app:${{ github.event.inputs.image_tag }} ./hipster/src/adservice
+          docker push pathfindersh/hipster-app:${{ github.event.inputs.image_tag }}
