build and push for all services .

--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -1,18 +1,34 @@
-name: Build & Push Docker images ## Building image and pushing in docker
+name: Build & Push All Services
 
 on:
   workflow_dispatch:
     inputs:
-      image_tag:
-        description: 'New Image Tag (e.g. adservice-v0.8.0)'
+      IMAGE_TAG:
+        description: 'Image Tag (e.g. v0.8.0)'
         required: true
 
 jobs:
-  build:
+  build-and-push:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        service:
+          - adservice
+          - cartservice
+          - checkoutservice
+          - currencyservice
+          - emailservice
+          - frontend
+          - loadgenerator
+          - paymentservice
+          - productcatalogservice
+          - recommendationservice
+          - shippingservice
+          - shoppingassistantservice
+
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
@@ -24,7 +40,7 @@ jobs:
           username: pathfindersh
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and Push Docker image
+      - name: Build and push ${{ matrix.service }}
         run: |
-          docker build -t pathfindersh/hipster-app:${{ github.event.inputs.image_tag }} ./hipster/src/adservice
-          docker push pathfindersh/hipster-app:${{ github.event.inputs.image_tag }}
+          docker build -t pathfindersh/hipster-app:${{ matrix.service }}-${{ github.event.inputs.IMAGE_TAG }} ./hipster/src/${{ matrix.service }}
+          docker push pathfindersh/hipster-app:${{ matrix.service }}-${{ github.event.inputs.IMAGE_TAG }}
