--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -3,32 +3,20 @@ name: Build & Push All Services
 on:
   workflow_dispatch:
     inputs:
-      IMAGE_TAG:
-        description: 'Image Tag (e.g. v0.8.0)'
+      IMAGE_VERSION:
+        description: 'Image version (e.g. v0.8.0)'
         required: true
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        service:
-          - adservice
-          - cartservice
-          - checkoutservice
-          - currencyservice
-          - emailservice
-          - frontend
-          - loadgenerator
-          - paymentservice
-          - productcatalogservice
-          - recommendationservice
-          - shippingservice
-          - shoppingassistantservice
+    env:
+      DOCKER_NAMESPACE: pathfindersh
+      BASE_PATH: ./hipster/src
 
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
@@ -37,10 +25,27 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: pathfindersh
+          username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push ${{ matrix.service }}
+      - name: Build & Push all services
         run: |
-          docker build -t pathfindersh/hipster-app:${{ matrix.service }}-${{ github.event.inputs.IMAGE_TAG }} ./hipster/src/${{ matrix.service }}
-          docker push pathfindersh/hipster-app:${{ matrix.service }}-${{ github.event.inputs.IMAGE_TAG }}
+          for service in $(ls $BASE_PATH); do
+            echo "🔧 Building $service"
+            # Special case for cartservice
+            if [ "$service" = "cartservice" ]; then
+              DOCKERFILE="$BASE_PATH/$service/src/Dockerfile"
+              CONTEXT="$BASE_PATH/$service/src"
+            else
+              DOCKERFILE="$BASE_PATH/$service/Dockerfile"
+              CONTEXT="$BASE_PATH/$service"
+            fi
+
+            IMAGE_TAG="${DOCKER_NAMESPACE}/hipster-app:${service}-${{ github.event.inputs.IMAGE_VERSION }}"
+
+            echo "🏗️ Building $IMAGE_TAG from $DOCKERFILE"
+            docker build -t $IMAGE_TAG -f $DOCKERFILE $CONTEXT
+            echo "📤 Pushing $IMAGE_TAG"
+            docker push $IMAGE_TAG
+          done
+
