--- a/hipster/kubernetes-manifests/checkoutservice.yaml
+++ b/hipster/kubernetes-manifests/checkoutservice.yaml
@@ -42,7 +42,7 @@ spec:
                 - ALL
             privileged: false
             readOnlyRootFilesystem: true
-          image: gcr.io/google-samples/microservices-demo/checkoutservice:v0.8.0
+          image: pathfindersh/hipster-app:checkoutservice-v0.8.0
           ports:
           - containerPort: 5050
           readinessProbe:
