--- a/hipster/kubernetes-manifests/productcatalogservice.yaml
+++ b/hipster/kubernetes-manifests/productcatalogservice.yaml
@@ -43,7 +43,7 @@ spec:
               - ALL
           privileged: false
           readOnlyRootFilesystem: true
-        image: gcr.io/google-samples/microservices-demo/productcatalogservice:v0.8.0
+        image: pathfindersh/hipster-app:productcatalogservice-v0.8.0
         ports:
         - containerPort: 3550
         env:
