--- a/hipster/kubernetes-manifests/adservice.yaml
+++ b/hipster/kubernetes-manifests/adservice.yaml
@@ -44,7 +44,7 @@ spec:
               - ALL
           privileged: false
           readOnlyRootFilesystem: true
-        image: pathfindersh/hipster-app:adservice-v0.8.0
+        image: docker.io/pathfindersh/hipster-app:adservice-v0.8.0
         ports:
         - containerPort: 9555
         env:
