--- a/hipster/kubernetes-manifests/emailservice.yaml
+++ b/hipster/kubernetes-manifests/emailservice.yaml
@@ -43,7 +43,7 @@ spec:
               - ALL
           privileged: false
           readOnlyRootFilesystem: true
-        image: pathfindersh/hipster-app:emailservice-v0.8.0
+        image: docker.io/pathfindersh/hipster-app:emailservice-v0.8.0
         ports:
         - containerPort: 8080
         env:
