--- a/hipster/kubernetes-manifests/frontend.yaml
+++ b/hipster/kubernetes-manifests/frontend.yaml
@@ -44,7 +44,7 @@ spec:
                 - ALL
             privileged: false
             readOnlyRootFilesystem: true
-          image: pathfindersh/hipster-app:frontend-v0.8.0
+          image: docker.io/pathfindersh/hipster-app:frontend-v0.8.0
           ports:
           - containerPort: 8080
           readinessProbe:
