--- a/hipster/kubernetes-manifests/paymentservice.yaml
+++ b/hipster/kubernetes-manifests/paymentservice.yaml
@@ -43,7 +43,7 @@ spec:
               - ALL
           privileged: false
           readOnlyRootFilesystem: true
-        image: pathfindersh/hipster-app:paymentservice-v0.8.0
+        image: docker.io/pathfindersh/hipster-app:paymentservice-v0.8.0
         ports:
         - containerPort: 50051
         env:
