--- a/hipster/kubernetes-manifests/shippingservice.yaml
+++ b/hipster/kubernetes-manifests/shippingservice.yaml
@@ -42,7 +42,7 @@ spec:
               - ALL
           privileged: false
           readOnlyRootFilesystem: true
-        image: pathfindersh/hipster-app:shippingservice-v0.8.0
+        image: docker.io/pathfindersh/hipster-app:shippingservice-v0.8.0
         ports:
         - containerPort: 50051
         env:
