--- a/hipster/kubernetes-manifests/loadgenerator.yaml
+++ b/hipster/kubernetes-manifests/loadgenerator.yaml
@@ -29,6 +29,8 @@ spec:
       annotations:
         sidecar.istio.io/rewriteAppHTTPProbers: "true"
     spec:
+      imagePullSecrets:
+        - name: regcred
       serviceAccountName: loadgenerator
       terminationGracePeriodSeconds: 5
       restartPolicy: Always
@@ -77,7 +79,7 @@ spec:
               - ALL
           privileged: false
           readOnlyRootFilesystem: true
-        image: docker.io/pathfindersh/hipster-app:loadgenerator-v0.8.0
+        image: pathfindersh/hipster-app:loadgenerator-v0.8.0
         env:
         - name: FRONTEND_ADDR
           value: "frontend:80"
