--- a/hipster/kubernetes-manifests/paymentservice.yaml
+++ b/hipster/kubernetes-manifests/paymentservice.yaml
@@ -27,6 +27,8 @@ spec:
       labels:
         app: paymentservice
     spec:
+      imagePullSecrets:
+        - name: regcred
       serviceAccountName: paymentservice
       terminationGracePeriodSeconds: 5
       securityContext:
@@ -43,7 +45,7 @@ spec:
               - ALL
           privileged: false
           readOnlyRootFilesystem: true
-        image: docker.io/pathfindersh/hipster-app:paymentservice-v0.8.0
+        image: pathfindersh/hipster-app:paymentservice-v0.8.0
         ports:
         - containerPort: 50051
         env:
