--- a/hipster/helm-chart/templates/emailservice.yaml
+++ b/hipster/helm-chart/templates/emailservice.yaml
@@ -69,7 +69,7 @@ spec:
               - ALL
           privileged: false
           readOnlyRootFilesystem: true
-        image: {{ .Values.images.repository }}/{{ .Values.adService.name }}:{{ .Values.adService.tag }}
+        image: "{{ .Values.images.repository }}/{{ .Values.adService.name }}:{{ .Values.images.adserviceTag }}"
         ports:
         - containerPort: 8080
         env:
