--- a/hipster/helm-chart/templates/shippingservice.yaml
+++ b/hipster/helm-chart/templates/shippingservice.yaml
@@ -68,7 +68,7 @@ spec:
               - ALL
           privileged: false
           readOnlyRootFilesystem: true
-        image: {{ .Values.images.repository }}/{{ .Values.adService.name }}:{{ .Values.adService.tag }}
+        image: "{{ .Values.images.repository }}/{{ .Values.adService.name }}:{{ .Values.images.adserviceTag }}"
         ports:
         - containerPort: 50051
         env:
