--- a/hipster/helm-chart/templates/cartservice.yaml
+++ b/hipster/helm-chart/templates/cartservice.yaml
@@ -47,6 +47,8 @@ spec:
       labels:
         app: {{ .Values.cartService.name }}
     spec:
+      imagePullSecrets:
+       - name: regcred
       {{- if .Values.serviceAccounts.create }}
       serviceAccountName: {{ .Values.cartService.name }}
       {{- else }}
@@ -73,7 +75,7 @@ spec:
               - ALL
           privileged: false
           readOnlyRootFilesystem: true
-        image: "{{ .Values.images.repository }}/{{ .Values.adService.name }}:{{ .Values.images.adserviceTag }}"
+        image: {{ .Values.cartService.image.repository }}:{{ .Values.cartService.image.tag }}
         ports:
         - containerPort: 7070
         env:
@@ -86,12 +88,17 @@ spec:
         resources:
           {{- toYaml .Values.cartService.resources | nindent 10 }}
         readinessProbe:
-          initialDelaySeconds: 15
+          initialDelaySeconds: 30
+          periodSeconds: 10
+          timeoutSeconds: 3
+          failureThreshold: 10
           grpc:
             port: 7070
         livenessProbe:
-          initialDelaySeconds: 15
-          periodSeconds: 10
+          initialDelaySeconds: 60
+          periodSeconds: 15
+          timeoutSeconds: 3
+          failureThreshold: 10
           grpc:
             port: 7070
 ---
