--- a/hipster/helm-chart/templates/recommendationservice.yaml
+++ b/hipster/helm-chart/templates/recommendationservice.yaml
@@ -43,6 +43,8 @@ spec:
       labels:
         app: {{ .Values.recommendationService.name }}
     spec:
+      imagePullSecrets:
+       - name: regcred
       {{- if .Values.serviceAccounts.create }}
       serviceAccountName: {{ .Values.recommendationService.name }}
       {{- else }}
@@ -69,15 +71,21 @@ spec:
               - ALL
           privileged: false
           readOnlyRootFilesystem: true
-        image: "{{ .Values.images.repository }}/{{ .Values.adService.name }}:{{ .Values.images.adserviceTag }}"
+        image: {{ .Values.recommendationService.image.repository }}:{{ .Values.recommendationService.image.tag }}
         ports:
         - containerPort: 8080
         readinessProbe:
-          periodSeconds: 5
+          initialDelaySeconds: 30
+          periodSeconds: 10
+          timeoutSeconds: 3
+          failureThreshold: 10
           grpc:
             port: 8080
         livenessProbe:
-          periodSeconds: 5
+          initialDelaySeconds: 60
+          periodSeconds: 15
+          timeoutSeconds: 3
+          failureThreshold: 10
           grpc:
             port: 8080
         env:
