--- a/hipster/helm-chart/templates/shippingservice.yaml
+++ b/hipster/helm-chart/templates/shippingservice.yaml
@@ -43,6 +43,8 @@ spec:
       labels:
         app: {{ .Values.shippingService.name }}
     spec:
+      imagePullSecrets:
+       - name: regcred
       {{- if .Values.serviceAccounts.create }}
       serviceAccountName: {{ .Values.shippingService.name }}
       {{- else }}
@@ -68,7 +70,7 @@ spec:
               - ALL
           privileged: false
           readOnlyRootFilesystem: true
-        image: "{{ .Values.images.repository }}/{{ .Values.adService.name }}:{{ .Values.images.adserviceTag }}"
+        image: {{ .Values.shippingService.image.repository }}:{{ .Values.shippingService.image.tag }}
         ports:
         - containerPort: 50051
         env:
