--- a/.github/workflows/polaris-scan.yml
+++ b/.github/workflows/polaris-scan.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           token: ${{ secrets.GH_PAT }}
 
-      - name: Run Polaris via Docker (v7.0.0)
+      - name: Run Polaris via Docker
         run: |
           echo "🔍 Running Polaris scan using Docker..."
           docker run --rm \
