--- a/.github/workflows/polaris.yml
+++ b/.github/workflows/polaris.yml
@@ -2,16 +2,9 @@ name: Polaris Scan on helm Manifests
 
 on:
   workflow_call:
-  push:
-    branches:
-      - main
-    paths:
-      - 'hipster/helm-chart/**'
-  pull_request:
-    branches:
-      - main
-    paths:
-      - 'hipster/helm-chart/**'
+    secrets:
+      gh_pat:
+        required: true
 
 jobs:
   polaris-scan:
@@ -21,7 +14,7 @@ jobs:
       - name: Checkout using Personal Access Token
         uses: actions/checkout@v4
         with:
-          token: ${{ secrets.GH_PAT }}
+          token: ${{ secrets.gh_pat }}
 
       - name: Install Helm
         uses: azure/setup-helm@v4
