--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,14 +9,7 @@ on:
       image_version:
         description: 'Image tag (e.g. v0.8.0)'
         required: true
-      skip_build:
-        description: 'Skip Docker Build & push? (true/false)'
-        required: false
-        default: 'false'
-      skip_deploy:
-        description: 'Skip ArgoCD deploy? (true/false)'
-        required: false
-        default: 'false'
+      
 
 jobs:
 
@@ -32,7 +25,7 @@ jobs:
       service: ${{ github.event.inputs.service }}
 
   build_and_push:
-    if: ${{ inputs.skip_build != 'true' }}
+    if: ${{always()}}
     needs: unit_tests
     uses: ./.github/workflows/docker-build.yml
     with:
@@ -41,7 +34,8 @@ jobs:
       DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
 
   argocd_deploy_without_build:
-    if: ${{ inputs.skip_build == 'true' && inputs.skip_deploy != 'true' }}
+    if: ${{always()}}
+    needs: build_and_push
     uses: ./.github/workflows/argo-update.yml
     with:
       service: ${{ inputs.service }}
